--- a/Ads/app/index.html
+++ b/Ads/app/index.html
@@ -1,30 +1,29 @@
-<header ng-include="'header.html'"></header>
-<body ng-app="softUniApp" ng-controller="SoftUniApp">
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Creating Routes</title>
+	<link rel="stylesheet" href="lib/bootstrap/bootstrap.min.css" />
+	<link rel="stylesheet" href="lib/bootstrap/bootstrap-theme.min.css" />
+	<link rel="stylesheet" type="text/css" href="css/app.css" />
+</head>
+<body ng-app="softUniApp">
+	<div class="container">
+		<div class="navbar">
+			<ul class="nav">
+				<li><a href="#/newAd">New Ad</a></li>
+				<li><a href="#/ads">All Ads</a></li>
+			</ul>
+		</div>
 
-<script src="lib/angular/angular.js"></script>
+		<ng-view></ng-view>
+	</div>
 
-<img ng-src="{{url}}" src="">
-
-<h1> {{name}} </h1>
-<ul>
-<li ng-repeat="car in cars" ng-class-even="_ngClassOdd">
-	<strong>Model: </strong> {{car.model}}
-	<strong>Color: </strong> {{car.color}}
-	<strong>Year: </strong> {{car.year}}
-</li>
-</ul>
-
-<ul>
-	<li ng-repeat="x in _resp_" ng-class-even="class">
-		{{x.Name}} --- {{x.Country}} --- {{x.City}}
-	</li>
-</ul>
-
-<input type="text" ng-model="Username" />
-
-<div ng-bind="Username"></div>
-
-<script src="js/app.js"></script>
-<script src="js/controllers/SoftUniApp.js"></script>
+	<script src="lib/angular/angular.js"></script>
+	<script src="lib/angular/angular-route.js"></script>
+	<script src="lib/angular/angular-resource.js"></script>
+	<script src="js/app.js"></script>
+	<script src="js/services/adsData.js"></script>
+	<script src="js/controllers/NewAdController.js"></script>
+	<script src="js/controllers/AllAdsController.js"></script>
 </body>
 </html>
