--- a/Ads/app/index.html
+++ b/Ads/app/index.html
@@ -32,7 +32,7 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div ng-view class="container">
         <div class="row">
             <div class ='md-col-3'>{{name}}</div>
             <div class ='md-col-7'>Second Column</div>
