--- a/Ads/app/index.html
+++ b/Ads/app/index.html
@@ -21,30 +21,26 @@
         <div class="navbar-collapse collapse" id="navbar-main">
             <ul class="nav navbar-nav">            
                 <li>
-                    <a href="#">Login</a>
+                    <a href="#/login">Login</a>
                 </li>
                 <li>
-                    <a href="#">Register</a>
+                    <a href="#/register">Register</a>
                 </li>
                 <li>
-                    <a href="#" id="download">Download</a>             
+                    <a href="#/ads" id="download">All Ads</a>             
             </ul>
         </div>
       </div>
     </div>
     <div ng-view class="container">
-        <div class="row">
-            <div class ='md-col-3'>{{name}}</div>
-            <div class ='md-col-7'>Second Column</div>
-            <div class ='md-col-2'>Third Column</div>
-        </div>
+    
     </div>
 
 	<script src="lib/angular/angular.js"></script><!--
 -->	<script src="lib/angular/angular-route.js"></script><!--
 	<script src="lib/angular/angular-resource.js"></script>
 -->	<script src="js/app.js"></script><!--
-	<script src="js/services/adsData.js"></script>
+-->	<script src="js/services/mainPage.js"></script><!--
 	<script src="js/controllers/NewAdController.js"></script>
 	<script src="js/controllers/AllAdsController.js"></script>-->
         <script type='text/javascript' src='js/controllers/MainController.js'></script>
