--- a/Ads/app/index.html
+++ b/Ads/app/index.html
@@ -13,14 +13,15 @@
     </footer>
 
 	<script src="lib/angular/angular.js"></script><!--
--->	<script src="lib/angular/angular-route.js"></script><!--
+-->	<script src="lib/angular/angular-route.js"></script>
 	<script src="lib/angular/angular-resource.js"></script>
--->	<script src="js/app.js"></script><!--
+	<script src="js/app.js"></script><!--
 -->	<script src="js/services/mainPage.js"></script>
--->	<script src="js/controllers/HomeController.js"></script>
-        <script src="js/directives/left-public-sidebar.js"></script><!--<!--
-	<script src="js/controllers/NewAdController.js"></script>
-	<script src="js/controllers/AllAdsController.js"></script>-->
-        
+ 	<script src="js/services/data/townsData.js"></script>
+	<script src="js/controllers/HomeController.js"></script>
+        <script src="js/controllers/LoginController.js"></script>
+        <script src="js/controllers/RegisterController.js"></script>
+        <script src="js/directives/left-public-sidebar.js"></script>
+        <script src="js/directives/filters.js"></script>        
 </body>
 </html>
