--- a/Ads/app/index.html
+++ b/Ads/app/index.html
@@ -16,12 +16,14 @@
 -->	<script src="lib/angular/angular-route.js"></script>
 	<script src="lib/angular/angular-resource.js"></script>
 	<script src="js/app.js"></script><!--
--->	<script src="js/services/mainPage.js"></script>
- 	<script src="js/services/data/townsData.js"></script>
+-->
 	<script src="js/controllers/HomeController.js"></script>
         <script src="js/controllers/LoginController.js"></script>
         <script src="js/controllers/RegisterController.js"></script>
         <script src="js/directives/left-public-sidebar.js"></script>
-        <script src="js/directives/filters.js"></script>        
+        <script src="js/directives/filters.js"></script> 
+        <script src="js/services/mainPage.js"></script>
+ 	<script src="js/services/data/townsData.js"></script>
+        <script src="js/services/data/userData.js"></script>
 </body>
 </html>
