--- a/Ads/app/index.html
+++ b/Ads/app/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="lib/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/app.css" />
 </head>
-<body ng-app='ads' ng-controller="HomeController">
+<body ng-app='adsApp' ng-controller="HomeController">
     <div ng-view class="view"></div>
     <footer>
         <p>© 2014 by Software University Foundation, No Rights Reserved</p>
@@ -15,15 +15,19 @@
 	<script src="lib/angular/angular.js"></script><!--
 -->	<script src="lib/angular/angular-route.js"></script>
 	<script src="lib/angular/angular-resource.js"></script>
+        <script src="lib/angular/angular-local-storage.js"></script>
 	<script src="js/app.js"></script><!--
 -->
 	<script src="js/controllers/HomeController.js"></script>
         <script src="js/controllers/LoginController.js"></script>
         <script src="js/controllers/RegisterController.js"></script>
         <script src="js/directives/left-public-sidebar.js"></script>
+        <script src="js/directives/public-ads.js"></script>
         <script src="js/directives/filters.js"></script> 
         <script src="js/services/mainPage.js"></script>
+        <script src="js/services/data/authentication.js"></script>
  	<script src="js/services/data/townsData.js"></script>
         <script src="js/services/data/userData.js"></script>
+        
 </body>
 </html>
