--- a/Ads/app/index.html
+++ b/Ads/app/index.html
@@ -19,6 +19,7 @@
 	<script src="js/app.js"></script><!--
 -->
 	<script src="js/controllers/HomeController.js"></script>
+        <script src="js/controllers/PublicAdsController.js"></script>
         <script src="js/controllers/LoginController.js"></script>
         <script src="js/controllers/RegisterController.js"></script>
         <script src="js/directives/left-public-sidebar.js"></script>
