get and display towns and categories

--- a/Ads/app/index.html
+++ b/Ads/app/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Ani's Ads</title>
     <link rel="stylesheet" href="lib/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/app.css" />
 </head>
 <body ng-app='adsApp' ng-controller="HomeController">
@@ -20,14 +21,15 @@
 -->
 	<script src="js/controllers/HomeController.js"></script>
         <script src="js/controllers/PublicAdsController.js"></script>
+        <script src="js/controllers/FiltersController.js"></script>
         <script src="js/controllers/LoginController.js"></script>
         <script src="js/controllers/RegisterController.js"></script>
         <script src="js/directives/left-public-sidebar.js"></script>
         <script src="js/directives/public-ads.js"></script>
         <script src="js/directives/filters.js"></script> 
-        <script src="js/services/mainPage.js"></script>
+        <script src="js/services/data/adsData.js"></script>
         <script src="js/services/data/authentication.js"></script>
- 	<script src="js/services/data/townsData.js"></script>
+ 	<script src="js/services/data/filtersData.js"></script>
         <script src="js/services/data/userData.js"></script>
         
 </body>
