left user sidebar and username in titlebar

--- a/Ads/app/index.html
+++ b/Ads/app/index.html
@@ -25,6 +25,7 @@
         <script src="js/controllers/LoginController.js"></script>
         <script src="js/controllers/RegisterController.js"></script>
         <script src="js/directives/left-public-sidebar.js"></script>
+        <script src="js/directives/left-user-sidebar.js"></script>
         <script src="js/directives/public-ads.js"></script>
         <script src="js/directives/filters.js"></script> 
         <script src="js/services/data/adsData.js"></script>
