--- a/Ads/app/index.html
+++ b/Ads/app/index.html
@@ -24,12 +24,14 @@
         <script src="js/controllers/FiltersController.js"></script>
         <script src="js/controllers/LoginController.js"></script>
         <script src="js/controllers/RegisterController.js"></script>
-        <script src="js/directives/left-public-sidebar.js"></script>
-        <script src="js/directives/left-user-sidebar.js"></script>
+       
+
         <script src="js/directives/public-ads.js"></script>
         <script src="js/directives/filters.js"></script> 
+        <script src="js/services/authentication.js"></script>
+        <script src="js/services/filter.js"></script>
         <script src="js/services/data/adsData.js"></script>
-        <script src="js/services/data/authentication.js"></script>
+
  	<script src="js/services/data/filtersData.js"></script>
         <script src="js/services/data/userData.js"></script>
         
