--- a/Ads/app/index.html
+++ b/Ads/app/index.html
@@ -18,6 +18,7 @@
 	<script src="lib/angular/angular-resource.js"></script>
         <script src="lib/angular/angular-local-storage.js"></script>
         <script src="lib/ui.bootstrap/ui.bootstrap.pagination-0.12.0.js"></script>
+        <script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
         
 	<script src="js/app.js"></script>
 
